worked on app setting

--- a/src/app/views/dashboard/ProfileAndSetting/app-setting/app-setting.component.html
+++ b/src/app/views/dashboard/ProfileAndSetting/app-setting/app-setting.component.html
@@ -44,7 +44,7 @@
         <label for="sel1">Reorder Functionality for Sections:</label>
         <button type="button" class="btn btn-light" (click)="rearrangeHomeModules()">Rearrange Home Modules <img
             src="../../../../../images/arrow-icon.png" align="right" alt=""></button>
-        <button type="button" class="btn btn-light">Rearrange Person Section
+        <button type="button" class="btn btn-light" (click)="rearrangePersonDetailModules()">Rearrange Person Section
           <img src="../../../../../images/arrow-icon.png" align="right" alt=""></button>
         <button type="button" class="btn btn-light" (click)="rearrangeAgentDetailModules()">Rearrange Agent Section
           <img src="../../../../../images/arrow-icon.png" align="right" alt=""></button>
