notification ui implemented

--- a/src/app/views/dashboard/notifications/notifications.component.html
+++ b/src/app/views/dashboard/notifications/notifications.component.html
@@ -1,16 +1,24 @@
 <div class="container app-bg2">
   <div class="row">
+    <ul>
+      <li *ngFor="let item of notifications;let i=index">
 
-    <div class="col-xs-12 col-md-6 cell-bg">
-      <div class="agent-detail">
-        <div class="dp">
-          <img src="images/baseline-business-24px.svg" alt="" />
+
+        <div class="col-xs-12 col-md-6 cell-bg">
+          <div class="agent-detail">
+            <div class="dp">
+              <img src="../../../../images/baseline-business-24px.svg" alt="" />
+            </div>
+            <h4>{{item.notification}}</h4> <span style="color:#000;">NETCO. Inc</span>
+            <br />
+            <span class="minTxt"><time>{{item.createDate | amTimeAgo}}</time></span>
+            <span class="textRight dismissBtn"><a (click)="onDismissClick(i,item.sysNotificationID)"
+                alt="">DISMISS</a></span>
+          </div>
         </div>
-        <h4>New Claim</h4> <span style="color:#000;">NETCO. Inc</span>
-        <br />
-        <span class="minTxt">6 min ago</span>
-        <span class="textRight dismissBtn"><a href="#" alt="">DISMISS</a></span>
-      </div>
-    </div>
+
+      </li>
+    </ul>
   </div>
+
 </div>
