--- a/src/app/views/dashboard/navigation-drawer/navigation-drawer.component.html
+++ b/src/app/views/dashboard/navigation-drawer/navigation-drawer.component.html
@@ -1,7 +1,11 @@
 <div class="container-fluid nospace">
   <div class="container nav-bg wrapper">
     <div class="row">
-      <div class="col-xs-2 toppad"> <span class="menu-icon" (click)="openNav()">&#9776;</span></div>
+      <div class="col-xs-2 toppad"> 
+          <img src="../../../../images/ic_hamburger.svg" alt="" (click)="openNav()" style="cursor:pointer;" >
+        
+        <!-- <span class="menu-icon"  >&#9776;</span> -->
+      </div>
       <div class="col-xs-8 text-center">
         <h1 class="t-agent">{{headerTitle}}</h1>
       </div>
