--- a/src/app/views/dashboard/notifications/notifications.component.html
+++ b/src/app/views/dashboard/notifications/notifications.component.html
@@ -2,14 +2,12 @@
   <div class="row">
     <ul>
       <li *ngFor="let item of notifications;let i=index">
-
-
         <div class="col-xs-12 col-md-6 cell-bg">
           <div class="agent-detail">
-            <div class="dp">
+            <div class="dp" (click)="onAgentClick(item)" >
               <img src="../../../../images/baseline-business-24px.svg" alt="" />
             </div>
-            <h4>{{item.notification}}</h4> <span style="color:#000;">NETCO. Inc</span>
+            <h4 (click)="onAgentClick(item)">{{item.notification}}</h4> <span style="color:#000;">NETCO. Inc</span>
             <br />
             <span class="minTxt"><time>{{item.createDate | amTimeAgo}}</time></span>
             <span class="textRight dismissBtn"><a (click)="onDismissClick(i,item.sysNotificationID)"
