--- a/src/app/views/agent/contact-detail/contact-detail.component.html
+++ b/src/app/views/agent/contact-detail/contact-detail.component.html
@@ -10,7 +10,7 @@
         <img src="../../../../images/edit.svg" alt=""><br><span class="edit-detail"><a>Edit Details</a></span></div>
     </div>
     <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
-  </div> 
+  </div>
   <div class="container app-bg2 bottom-wrapper-for-back">
     <div class="row">
       <div class="col-xs-12 col-md-6 cell-bg">
@@ -33,9 +33,8 @@
         <div class="agent-contact">
           <h4>Address</h4> <span class="ag-add">{{getAddress()}}</span>
           <div class="clearfix"></div>
-          <div class="state"><span>State</span><br> <span class="st2">{{entityContactModel.state}}</span></div>
-          <div class="state"><span>Pin Code</span><br><span class="st2">{{entityContactModel.zip}}</span></div>
-
+          <div class="state">State<br> <span>{{entityContactModel.state}}</span></div>
+          <div class="state">Pin Code<br><span>{{entityContactModel.zip}}</span></div>		
         </div>
       </div>
 
@@ -69,12 +68,30 @@
       <div class="col-xs-12 col-md-6 cell-bg">
         <div class="agent-contact">
           <h4>E-mail ID</h4> <span><a>{{entityContactModel.email}}</a></span>
-          <div class="clearfix"></div>
+
+          <div class="col-xs-8 col-md-8 noPadding">
+            <div class="ag-detail-icons">
+              <a (click)="doEmail()" alt=""><img src="../../../../images/email.svg" alt=""> E-mail this ID</a>
+            </div>
+          </div>
+          <div class="col-xs-4 col-md-4 noPadding">
+            <div class="ag-detail-icons">
+              <a (click)="copyText(entityContactModel.email)" alt=""><img src="../../../../images/copy.svg" alt=""> Copy</a>
+            </div>
+          </div>
+
+
+          <!-- <div class="clearfix"></div>
           <div class="ag-detail">
             <ul>
               <li class="mail" (click)="doEmail()">E-mail this ID</li>
             </ul>
           </div>
+          <div class="col-xs-4 col-md-4 noPadding">
+            <div class="ag-detail-icons">
+              <a href="#" alt=""><img src="images/copy.svg" alt=""> Copy</a>
+            </div>
+          </div> -->
         </div>
       </div>
 
