--- a/src/app/views/entity/audit-detail-queued/audit-detail-queued.component.html
+++ b/src/app/views/entity/audit-detail-queued/audit-detail-queued.component.html
@@ -83,7 +83,7 @@
     <div class="row">
       <div class="col-xs-12 col-md-12 noPadding positionFixed">
         <div class="buttonFooter_wp">
-          <button type="button" class="btn btn-primary footerBtn btnInactive" (click)="onDownloadPdfClick()">
+          <button type="button" class="btn btn-primary footerBtn btnInactive" (click)="onDownloadPdfClick()" disabled>
             <img src="../../../../images/ic_pdf_common-2.svg" alt=""> Download Audit Details PDF
           </button>
         </div>
