--- a/src/app/views/dashboard/search/search.component.html
+++ b/src/app/views/dashboard/search/search.component.html
@@ -25,11 +25,13 @@
           <li *ngFor="let item of searchedUsers; let i = index;">
             <div class="col-xs-12 col-md-6 cell-bg">
               <div class="agent-detail ag-perform">
-                <div class="dp" (click)="onItemClick(item)"><img
-                    src="{{item.type=='A'?'../../../../../../images/baseline-business-24px.svg':'../../../../../../images/username.svg'}}"
-                    alt="" /></div>
-                <h4><a (click)="onItemClick(item)">{{item.name}}</a> <span
-                    (click)="onItemClick(item)">({{item.entityId}})</span><a><img
+                <div class="dp" (click)="onItemClick(item)">
+                  <img src="{{item.type=='A'?'../../../../../../images/baseline-business-24px.svg':'../../../../../../images/username.svg'}}"
+                    alt="" />
+                    <div class="dpProfile_wp proActiBg">{{item.stat}}</div>
+                  </div>
+                <h4><a (click)="onItemClick(item)">{{item.name}} </a> 
+                  <span (click)="onItemClick(item)">({{item.entityId}})</span><a><img
                       src="{{checkEntityFavorite(item)?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
                       alt="" (click)="onStarClick(item)"></a>
                 </h4>
