--- a/src/app/views/entity/compliance/compliance.component.html
+++ b/src/app/views/entity/compliance/compliance.component.html
@@ -24,8 +24,8 @@
               <div class="statusInd_wp"
                 [ngClass]="{'bgGreen':item.comstat=='Green','bgYellow':item.comstat=='Yellow','bgRed':item.comstat=='Red'}">
                 {{item.comstat | slice:0:1}}</div>
-              <span>{{item.stat}}</span>
-              <span class="expDate">Expiration Date:{{item.expirationDate | slice:0:10}}</span>
+              <span>{{item.stat?item.stat:'Unknown'}}</span>
+              <span class="expDate">{{getComplianceDate(item) | slice:0:10}}</span>
               <div class="clear"></div>
               <div class="paddingTop10"></div>
             </div>
