--- a/src/app/customUI/dialogs/search-filter/search-filter.component.html
+++ b/src/app/customUI/dialogs/search-filter/search-filter.component.html
@@ -57,7 +57,7 @@
             </select>
           </div>
 
-          <div class="form-group" style="margin-bottom:0px;">
+          <!--  <div class="form-group" style="margin-bottom:0px;">
             <label for="SearchIn">Sort By:</label>
           </div>
 
@@ -70,7 +70,7 @@
                 <button type="button" class="btn btn-primary btn-a-z" id="descendingOrder">Z-A</button>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="clearfix paddingTop15"></div>
 
