--- a/src/app/views/dashboard/top-agents/top-agents.component.html
+++ b/src/app/views/dashboard/top-agents/top-agents.component.html
@@ -9,10 +9,15 @@
                 (click)="onAgentClick(item)" />
                 <div class="dpProfile_wp proActiBg">{{item.stat}}</div>
             </div>
-            <h4><a (click)="onAgentClick(item)">{{item.name}}</a> <span (click)="onAgentClick(item)">({{item.entityId}})</span><a><img
-                  src="{{checkEntityFavorite(item)?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
-                  alt="" (click)="onStarClick(item)"></a></h4>
-            <span>{{getAddress(item)}}</span>
+            <h4 class="topAgentsName"><a (click)="onAgentClick(item)">{{item.name}}</a>
+              <span (click)="onAgentClick(item)"> ({{item.entityId}})</span>
+              <div class="clearfix paddingTop10"></div>
+               <span>{{getAddress(item)}}</span>
+              </h4>
+              <a class="favouritIconPosition"><img src="{{checkEntityFavorite(item)?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
+                alt="" (click)="onStarClick(item)"></a>
+            
+                  
             <div class="clearfix"></div>
             <div class="row" (click)="onAgentClick(item)">
               <div class="col-md-6 col-xs-6">
