--- a/src/app/views/dashboard/navigation-drawer/navigation-drawer.component.html
+++ b/src/app/views/dashboard/navigation-drawer/navigation-drawer.component.html
@@ -1,57 +1,61 @@
 <div class="container-fluid nospace">
-  <div class="container nav-bg wrapper">
-    <div class="row">
-      <div class="col-xs-2 toppad"> 
-          <img src="../../../../images/ic_hamburger.svg" alt="" (click)="openNav()" style="cursor:pointer;" >
-        
-        <!-- <span class="menu-icon"  >&#9776;</span> -->
+  <div class="wrapper">
+    <div class="container nav-bg ">
+      <div class="row">
+        <div class="col-xs-2 toppad">
+          <img src="../../../../images/ic_hamburger.svg" alt="" (click)="openNav()" style="cursor:pointer;">
+
+          <!-- <span class="menu-icon"  >&#9776;</span> -->
+        </div>
+        <div class="col-xs-8 text-center">
+          <h1 class="t-agent">{{headerTitle}}</h1>
+        </div>
+        <div class="col-xs-2 text-right toppad" *ngIf="showRefreshButton">
+          <img src="../../../../images/refresh.svg" alt="" (click)="onRefreshClick()"></div>
+
+        <div class="col-xs-2 text-right toppad" *ngIf="showFilterButton"><img src="../../../../images/filter.svg" alt=""
+            (click)="onFilterClick()" data-toggle="modal" data-target="#filterPopup"><br><span
+            class="edit-detail"><a>Filter</a></span></div>
+
+        <div class="col-xs-2 text-right toppad" *ngIf="showRecentProfileButton"><img
+            src="../../../../images/recent-profile-white.svg" alt="" data-toggle="modal"
+            data-target="#recentAssociatesl" (click)="onRecentProfileClick()"><br><span
+            class="edit-detail"><a></a></span></div>
+
+        <div class="col-xs-2 text-right toppad" *ngIf="showLogoutButton"><img src="../../../../images/ic_logout.svg"
+            alt="" (click)="onLogoutClick()"><br><span class="edit-detail"><a></a></span></div>
       </div>
-      <div class="col-xs-8 text-center">
-        <h1 class="t-agent">{{headerTitle}}</h1>
+
+      <div id="mySidenav" class="sidenav">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-5"> <a href="javascript:void(0)" class="closebtn" (click)="closeNav()"><img
+                  src="../../../../images/close.svg" alt=""></a></div>
+            <div class="col-xs-7 pro-n-setting" (click)="onSettingClick()"><a><img src="../../../../images/dp2.png"
+                  class="img-circle" width="24" height="24" alt="" /> Profile &
+                Settings</a></div>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-1"></div>
+            <div class="col-xs-10 divider"></div>
+            <div class="col-xs-1"></div>
+          </div>
+        </div>
+
+        <ul class="slide-menu">
+          <div *ngFor="let item of sideNavArray" (click)="onNavigationItemClick(item.title)">
+            <li class="{{item.class}}"><a>{{item.title}}</a></li>
+          </div>
+        </ul>
       </div>
-      <div class="col-xs-2 text-right toppad" *ngIf="showRefreshButton">
-        <img src="../../../../images/refresh.svg" alt="" (click)="onRefreshClick()"></div>
-
-      <div class="col-xs-2 text-right toppad" *ngIf="showFilterButton"><img src="../../../../images/filter.svg" alt=""
-          (click)="onFilterClick()" data-toggle="modal" data-target="#filterPopup"><br><span
-          class="edit-detail"><a>Filter</a></span></div>
-
-      <div class="col-xs-2 text-right toppad" *ngIf="showRecentProfileButton"><img
-          src="../../../../images/recent-profile-white.svg" alt="" data-toggle="modal" data-target="#recentAssociatesl"
-          (click)="onRecentProfileClick()"><br><span class="edit-detail"><a></a></span></div>
-
-      <div class="col-xs-2 text-right toppad" *ngIf="showLogoutButton"><img src="../../../../images/ic_logout.svg"
-          alt="" (click)="onLogoutClick()"><br><span class="edit-detail"><a></a></span></div>
     </div>
-
-    <div id="mySidenav" class="sidenav">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-5"> <a href="javascript:void(0)" class="closebtn" (click)="closeNav()"><img
-                src="../../../../images/close.svg" alt=""></a></div>
-          <div class="col-xs-7 pro-n-setting" (click)="onSettingClick()"><a><img src="../../../../images/dp2.png"
-                class="img-circle" width="24" height="24" alt="" /> Profile &
-              Settings</a></div>
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-1"></div>
-          <div class="col-xs-10 divider"></div>
-          <div class="col-xs-1"></div>
-        </div>
-      </div>
-
-      <ul class="slide-menu">
-        <div *ngFor="let item of sideNavArray" (click)="onNavigationItemClick(item.title)">
-          <li class="{{item.class}}"><a>{{item.title}}</a></li>
-        </div>
-      </ul>
-    </div>
-
+    <app-entity-name-header></app-entity-name-header>
   </div>
   <div class="bottom-wrapper">
+
 
     <app-recent-profile-dialog></app-recent-profile-dialog>
     <app-search-filter></app-search-filter>
