--- a/src/app/views/dashboard/agent-with-performance/agent-with-performance.component.html
+++ b/src/app/views/dashboard/agent-with-performance/agent-with-performance.component.html
@@ -46,7 +46,7 @@
       <div class="loadMore"><a (click)="onLoadMoreClick()" alt="Load More">Load More</a></div>
     </div>
   </div>
-  <div id="ratioView">{{totalAndCurrentRowsRatio}}</div>
+  <!-- <div id="ratioView">{{totalAndCurrentRowsRatio}}</div> -->
 
   <button (click)="topFunction()" id="myBtn" title="Go to top"><span
       class="glyphicon glyphicon-arrow-up"></span></button>
