--- a/src/app/views/dashboard/search/search.component.html
+++ b/src/app/views/dashboard/search/search.component.html
@@ -55,7 +55,7 @@
             <div class="loadMore"><a (click)="onLoadMoreClick()" alt="Load More">Load More</a></div>
           </div>
         </div>
-        <div id="ratioView">{{totalAndCurrentRowsRatio}}</div>
+        <!-- <div id="ratioView">{{totalAndCurrentRowsRatio}}</div> -->
       </div>
       <div class="serach-emp " *ngIf="!hideNoDataDiv">
         <h2><em>It is Empty Here!</em></h2>
