--- a/src/app/customUI/dialogs/update-user-profile/update-user-profile.component.html
+++ b/src/app/customUI/dialogs/update-user-profile/update-user-profile.component.html
@@ -89,8 +89,7 @@
 
               <div class="form-group">
                 <label for="Contact Number 1">Number 1</label>
-                <input type="number" class="form-control" id="pinCode" formControlName="phone"
-                  placeholder="720-434-1417">
+                <input type="number" class="form-control" id="pinCode" formControlName="phone">
                 <!-- Error View -->
                 <div id="errorDiv" id="errorDiv"
                   *ngIf="userInfoForm.get('phone').hasError('required') && submitClicked">
@@ -126,8 +125,7 @@
             <div class="col-xs-6 col-md-6">
               <div class="form-group">
                 <label for="Contact Number 1">Number 2</label>
-                <input type="number" class="form-control" id="pinCode" formControlName="phone2"
-                  placeholder="720-434-1417">
+                <input type="number" class="form-control" id="pinCode" formControlName="phone2">
                 <!-- Error View -->
                 <div id="errorDiv" *ngIf="userInfoForm.get('phone2').hasError('required') && submitClicked">
                   You entered not valid input.
