--- a/src/app/views/dashboard/agent-under-plan/agent-under-plan.component.html
+++ b/src/app/views/dashboard/agent-under-plan/agent-under-plan.component.html
@@ -5,18 +5,24 @@
         <div class="col-xs-12 col-md-6 cell-bg">
           <div class="agent-detail">
             <div class="dp">
-              <img src="images/baseline-business-24px.svg" alt="" (click)="onAgentClick(item,i)"/>
+              <img src="images/baseline-business-24px.svg" alt="" (click)="onAgentClick(item,i)" />
               <div class="dpProfile_wp proActiBg">A</div>
             </div>
-            <h4><a (click)="onAgentClick(item)">{{item.name}}</a><span (click)="onAgentClick(item)"> ({{item.entityId}})</span><a><img img
-                  src="{{checkEntityFavorite(item)?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
-                  alt="" (click)="onStarClick(item,i)"></a></h4>
-            <span>{{item.city+','+item.state}}</span>
+            <h4 class="topAgentsName"><a (click)="onAgentClick(item)">{{item.name}}</a><span
+                (click)="onAgentClick(item)">
+                ({{item.entityId}})</span>
+              <div class="clearfix paddingTop10"></div>
+              <span>{{getAddress(item)}}</span>
+            </h4>
+            <a class="favouritIconPosition"><img
+                src="{{checkEntityFavorite(item)?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
+                alt="" (click)="onStarClick(item,i)"></a>
             <div class="clearfix"></div>
             <div class="row">
 
               <div class="col-md-6 col-xs-6">
-                <div class="amount">NPR YTD<br><span>{{item.netPermium| currency:'USD':"symbol-narrow":'1.0-0'}}</span></div>
+                <div class="amount">NPR YTD<br><span>{{item.netPermium| currency:'USD':"symbol-narrow":'1.0-0'}}</span>
+                </div>
               </div>
             </div>
           </div>
