--- a/src/app/views/entity/entity-alert/entity-alert.component.html
+++ b/src/app/views/entity/entity-alert/entity-alert.component.html
@@ -29,7 +29,7 @@
           <div class="loadMore"><a alt="Load More" (click)="onLoadMoreClick()">Load More</a></div>
         </div>
       </div>
-      <div id="ratioView">{{totalAndCurrentRowsRatio}}</div>
+      <!-- <div id="ratioView">{{totalAndCurrentRowsRatio}}</div> -->
     </div>
   </div>
 </div>
